<resources>
    <string name="app_name">Planning App</string>
    <string name="question_text">Get hello from server</string>
    <string name="button_text">OK</string>
    <string name="go_button_text">Go</string>
    <string name="task_list_title">Tasks</string>
    <string name="navigation_view_header_title">Planning App</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="refresh">Refresh</string>

    <string name="loading_text">Loading…</string>
    <string name="loading_error_text">Loading error :(</string>
    <string name="task_name">Task Name</string>
    <string name="task_actual_hours">Actual Hours</string>
    <string name="task_planned_hours">Planned Hours</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="task_succesfully_saved">Task successfully saved!</string>
    <string name="title_activity_sign_up">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_wrong_email_or_password">Wrong email or password</string>
    <string name="log_out">Log out</string>
    <string name="add_comment">Add comment</string>
    <string name="add">Add</string>
</resources>
